<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NudziMiSie</string>
    <string name="action_settings">Settings</string>
    <string name="email_hint">E-mail</string>
    <string name="email_or_username_hint">E-mail or Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button_text">Log In</string>
    <string name="loading">Please wait...</string>
    <string name="register_tv">Does not have an account? <b>Sign in</b></string>
    <string name="first_name_hint">First Name (Optional)</string>
    <string name="last_name_hint">Last Name (Optional)</string>
    <string name="username_hint">Username</string>
    <string name="register_button">Register</string>
    <string name="password2_hint">Re-type password</string>
    <string name="no_internet_to">There is no internet connection</string>
    <string name="action_search">search</string>
    <string name="action_take_picture">Take picture</string>
    <string name="action_logout">Logout</string>
    <string name="action_add_picture">Add picture</string>
    <string name="double_back_on_exit_toas">Press again to exit</string>
    <string name="btnTakePicture">Capture Image</string>
    <string name="btnRecordVideo">Record Video</string>
    <string name="or">(or)</string>
    <string name="btnUploadToServer">Upload to Server</string>
    <string name="action_add_content">Add content</string>
    <string name="title_activity_upload_content">UploadContent</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_lista_tras">ListaTras</string>

</resources>
