<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!-- Search, should appear as action button -->
    <item android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:title="@string/action_search"
        app:showAsAction="ifRoom" />

    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"/>

    <item android:id="@+id/action_take_picture"
        android:title="@string/action_take_picture"
        android:icon="@drawable/ic_action_camera"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_logout"
        android:title="@string/action_logout"/>

    <item android:id="@+id/action_add_picture"
        android:title="@string/action_add_picture"/>

    <item android:id="@+id/action_add_content"
        android:title="@string/action_add_content"
        android:icon="@drawable/ic_action_add_to_queue" />

</menu>