<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background">

     <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:paddingRight="@dimen/login_horizontal_padding"
        android:paddingLeft="@dimen/login_horizontal_padding"
        android:orientation="vertical"
        android:gravity="top">

        <EditText
            android:id="@+id/first_name_et"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:hint="@string/first_name_hint"
            android:textColor="@color/login_et_color"
            android:textColorHint="@color/login_et_color"
            android:singleLine="true"
            android:inputType="textCapSentences"
            />

        <EditText
            android:id="@+id/last_name_et"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:hint="@string/last_name_hint"
            android:textColor="@color/login_et_color"
            android:textColorHint="@color/login_et_color"
            android:singleLine="true"
            android:inputType="textCapSentences"
            />

        <EditText
            android:id="@+id/username_et"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:hint="@string/username_hint"
            android:textColor="@color/login_et_color"
            android:textColorHint="@color/login_et_color"
            android:singleLine="true"
            />

        <EditText
            android:id="@+id/email_et"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:hint="@string/email_hint"
            android:textColor="@color/login_et_color"
            android:textColorHint="@color/login_et_color"
            android:singleLine="true"
            android:inputType="textEmailAddress"
            />

        <EditText
            android:id="@+id/password_et"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:hint="@string/password_hint"
            android:textColor="@color/login_et_color"
            android:textColorHint="@color/login_et_color"
            android:inputType="textPassword"            />
        <EditText
            android:id="@+id/password2_et"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:hint="@string/password2_hint"
            android:textColor="@color/login_et_color"
            android:textColorHint="@color/login_et_color"
            android:inputType="textPassword"            />
        <Button
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:text="@string/register_button"/>


    </LinearLayout>



</LinearLayout>