<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:gravity="center"
    android:orientation="vertical"

    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_background">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/logoo"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:paddingBottom="37dp"
                    android:src="@drawable/logo_bar" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_below="@id/logoo"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/login_horizontal_padding"
                    android:paddingRight="@dimen/login_horizontal_padding">


                    <EditText
                        android:id="@+id/login_et"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/edit_text_height"
                        android:hint="@string/email_or_username_hint"
                        android:singleLine="true"
                        android:textColor="@color/login_et_color"
                        android:textColorHint="@color/login_et_color" />

                    <EditText
                        android:id="@+id/password_et"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/edit_text_height"
                        android:hint="@string/password_hint"
                        android:inputType="textPassword"
                        android:textColor="@color/login_et_color"
                        android:textColorHint="@color/login_et_color" />

                    <Button
                        android:id="@+id/login_bt"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/edit_text_height"
                        android:text="@string/login_button_text" />


                </LinearLayout>


                <TextView
                    android:id="@+id/register_tv"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:clickable="true"
                    android:gravity="right"
                    android:paddingRight="50dp"
                    android:text="@string/register_tv" />

            </LinearLayout>
    </ScrollView>
</RelativeLayout>
